# pdfanno

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
benchmarks/baselines/: gt_semantic_arxiv_1706.03762.json  gt_semantic_bert_1810.04805.json  gt_semantic_word2vec_1301.3781.json  v0.2.0-multi.json  v0.2.0.json  v0.2.1.json  week6_stressed.json
benchmarks/fixtures/: annotate_real_pair.py  build_cross_section.py  build_real_pairs.py  build_revised_manuscript.py
benchmarks/reports/: stress_diff_synthetic.md  v0.2_scorer_summary.md  week10_ctx_mode.md  week11_ctx_assign.md  week1_spike_arxiv_1706.03762.md  week2_baseline.md  week2_eval_arxiv_1706.03762.md  week2_eval_revised.md  week3_eval_arxiv_1706.03762.md  week3_eval_revised.md  week3_summary.md  week4_ctx_experiment.md  week5_widen_bench.md  week6_density.md  week7_group_assign.md  week8_semantic_oracle.md  week9_broken_floor.md
benchmarks/tools/: compare_baseline.py  evaluate.py  ground_truth.py  ground_truth_semantic.py  hardcoded_gt.py  stress_diff_synthetic.py
docs/: diff.md
docs/examples/: arxiv_attention_v1_to_v5.md
pdfanno/: __init__.py  cli.py  exit_codes.py  logging.py  models.py
pdfanno/diff/: __init__.py  _hungarian.py  anchors.py  context.py  match.py  sections.py  types.py
pdfanno/pdf_core/: __init__.py  annotations.py  colors.py  document.py  save.py  text.py
pdfanno/rules/: __init__.py  idempotency.py  match.py
pdfanno/store/: __init__.py  schema.sql  sidecar.py
tests/: conftest.py  test_cli_contracts.py  test_cross_section.py  test_diff.py  test_extract_apply.py  test_highlight.py  test_hungarian.py  test_idempotency.py  test_list.py  test_note.py  test_save_policy.py  test_sections.py  test_sidecar.py
tests/fixtures/: _build.py  _build_versions.py
