[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfanno"
version = "0.2.1"
description = "Agent-friendly CLI for PDF annotation writeback (highlight, note, extract, apply) with stable IDs and idempotent operations."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
keywords = ["pdf", "annotation", "highlight", "cli", "agent", "llm", "mcp", "pymupdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pymupdf>=1.24",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
pdfanno = "pdfanno.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pdfanno"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["assets", "fixtures", "._*", "**/._*", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra --strict-markers"
